--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body {
    align-items: center;
 }
 
+.menu-list a {
+    text-decoration:none;
+    color:black; 
+}
 .menu-item {
     margin-left: 3.1em;
 }
